# forensivision

./: .gitignore  README.md  SECURITY_PRIVACY_REQUIREMENTS.md  docker-compose.yml  package-lock.json  package.json
database/init/: 01_init.sql
database/migrations/: 001_initial_schema.sql
docs/: BACKEND_ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md
frontend/: .env.local.example  next.config.js  package.json  tailwind.config.js
frontend/public/: site.webmanifest
frontend/scripts/: setup-ai-model.sh
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/docs/: layout.tsx
frontend/src/app/pricing/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/components/docs/: anchor-heading.tsx  code-block.tsx  code-tabs.tsx  copy-button.tsx  docs-sidebar.tsx  endpoint-header.tsx  param-table.tsx
frontend/src/components/landing/: quick-upload.tsx
frontend/src/components/ui/: logo.tsx
frontend/src/lib/: utils.ts
frontend/src/lib/ai-detector/: detector-service.ts  index.ts  (+3 more)
services/analysis/: Dockerfile  pyproject.toml
services/analysis/src/: main.py
services/analysis/src/api/: auth.py  rate_limit.py  routes.py
services/analysis/src/core/: config.py  database.py  rabbitmq.py  redis.py
services/analysis/src/detectors/: __init__.py  image_detector.py
services/analysis/src/models/: analysis.py
services/analysis/src/services/: analysis_service.py  video_analyzer.py  video_service.py
services/analysis/src/video/: __init__.py  downloader.py  frame_extractor.py
services/auth/: Dockerfile  go.mod  go.sum
services/ml-worker/: Dockerfile  pyproject.toml
services/ml-worker/src/: config.py  database.py  main.py  storage.py
services/ml-worker/src/detectors/: image_detector.py
services/ml-worker/src/video/: __init__.py  downloader.py  frame_extractor.py
services/ml-worker/src/workers/: __init__.py  video_worker.py
services/storage/: Dockerfile  go.mod
(+36 files in other folders)
